--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,15 +30,26 @@ body::before {
     width: 100%;
     z-index: -1;
     background: var(--color-darkblue);
-    background-image: linear-gradient(115deg,
+    /*background-image: linear-gradient(115deg,
             rgba(47, 61, 48, 1.000),
-            rgba(87, 96, 92, 1.000)),
-        /*url(https://cdn);*/
-    ;
+            rgba(87, 96, 92, 1.000));*/
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.center__text h1{
+    text-align: center;
+}
+
+.center__text div {
+    text-align: center;
+}
+
+.center__text p {
+    text-align: center;
+}
+
 
 .ppadding{
 
@@ -205,6 +216,10 @@ input[type=checkbox] {
     }
 }
 
+.frameborder_zero {
+    border: 0;
+}
+
 .container1 {
     display: grid;
     align-items: center;
@@ -212,14 +227,31 @@ input[type=checkbox] {
     column-gap: 0px;
 }
 
+.image1_container {
+    max-width: 80%;
+    margin: auto;
+}
+
 .image1 {
-    padding-left:50px;
+    display: block;
     max-width: 100%;
     max-height: 100%;
+    margin: auto;
     border-radius: 12px;
 }
 
 .text1 {
     font-size: 20px;
-    padding-right:50px;
+    max-width: 80%;
+    margin: auto;
+}
+
+@media screen and (max-width: 1200px) {
+    .container1 {
+        display: block;
+    }
+
+    .text1 {
+        margin-top: 3rem;
+    }
 }
