--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,9 +34,6 @@ body::before {
   width: 100%;
   z-index: -1;
   background: var(--color-darkblue);
-  /*background-image: linear-gradient(115deg,
-            rgba(47, 61, 48, 1.000),
-            rgba(87, 96, 92, 1.000));*/
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -386,7 +383,7 @@ input[type="checkbox"] {
   grid-row-start: 6;
   grid-row-end: 9;
 
-  
+
 }
 
 iframe {
@@ -402,6 +399,12 @@ iframe {
   .text1 {
     margin-top: 3rem;
   }
+}
+
+#construction,
+#defense,
+#military {
+  text-align:center;
 }
 
 /* APPLYING MEDIA QUERIES */
